resources/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app
  namespace: team-3
spec:
  # client는 replica 1개
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: alpha.eksctl.io/nodegroup-name
                    operator: In
                    values:
                      - ng-3
      containers:
        - name: client-app
          # 바꿔주기
          image: 686710509719.dkr.ecr.ap-northeast-2.amazonaws.com/team-3:client-ddf7017948ef2633443b07738a2c54ff76031984
          imagePullPolicy: IfNotPresent
          # container 자원 설정(변경 가능)
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: team-3
spec:
  type: NodePort
  selector:
    app: client-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
