resources/deploy-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-app
  namespace: team-3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server-app
  template:
    metadata:
      labels:
        app: server-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: alpha.eksctl.io/nodegroup-name
                    operator: In
                    values:
                      - ng-3
      containers:
        - name: server-app
          # 바꿔주기
          image: 686710509719.dkr.ecr.ap-northeast-2.amazonaws.com/team-3:server-3c5f8b47d785d718f7a6c16906b8cb071e6e125e
          imagePullPolicy: IfNotPresent
          # container 자원 설정(변경 가능)
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: team-3
spec:
  type: NodePort
  selector:
    app: server-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
